<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>persist_parameter_server</name>
  <version>1.0.3</version>
  <description>
    ros2 parameter server that other nodes can write/read parameters including persistent parameters.
  </description>
  <maintainer email="Tomoya.Fujita@sony.com">Tomoya Fujita</maintainer>
  <license>Apache License 2.0</license>
  <author email="Tomoya.Fujita@sony.com">Tomoya Fujita></author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>libboost-dev</build_depend>
  <build_depend>libboost-filesystem-dev</build_depend>
  <build_depend>libboost-program-options-dev</build_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>rcutils</depend>
  <depend>rmw</depend>
  <depend>rmw_implementation_cmake</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>yaml_cpp_vendor</depend>

  <exec_depend>launch_ros</exec_depend>

  <test_depend>ament_cmake_pytest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>launch</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
