<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2_persistent_parameter_server_test</name>
  <version>1.0.1</version>
  <description>
   Client test demo for persistent parameter server
  </description>
  <maintainer email="Tomoya.Fujita@sony.com">dbt</maintainer>
  <license>Apache License 2.0</license>
  <author email="Tomoya.Fujita@sony.com">Tomoya Fujita></author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>rcutils</depend>
  <depend>rmw</depend>
  <depend>rmw_implementation_cmake</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>

  <exec_depend>launch_ros</exec_depend>

  <test_depend>launch</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
